[package]
name = "ublks3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libublk = { path = ".." }
libc = "0.2"
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.79"
log = {version = "0.4", features = ["release_max_level_off"]}
anyhow = {version = "1.0.66", features = ["default"]}
io-uring = "0.6.0"

aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
tokio = { version = "1", features = ["full"] }